--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,6 @@
-name: stochproc
-channels:
-  - conda-forge
 dependencies:
-  - numpy
-  - pandas
   - matplotlib
-#  - pip
-#  - pip:
-#    - pyecharts
+  - numpy
+  - pip
+  - pip:
+      - julia
